[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.26.0"

[dependencies.user]
path = "../programs/user"
features = ["no-entrypoint"]

[dependencies.mockwork]
path = "../programs/mockwork"
features = ["no-entrypoint"]